[workspace]
members = [ "core/kernel",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Grassedge <grassedge.c@gmail.com>"]
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
debug = "limited"

[profile.release]
codegen-units = 1
lto = "fat"
