[workspace]
members = [ "core/kernel",
    "xtask",
]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = ["Grassedge <grassedge.c@gmail.com>"]
edition = "2024"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
panic = "abort"
lto = "fat"

[profile.dev.package.kernel]


[profile.release.package.kernel]
incremental = true
codegen-units = 1
strip = "symbols"
