[package]
name = "kernel"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
bitflags = "2.8.0"
buddy_system_allocator = "0.11.0"
lazy_static = {version = "1.5.0", features = ["spin_no_std"]}
log = "0.4.22"
riscv = "0.13.0"
sbi-rt = {version = "0.0.3", features = ["legacy"]}
xmas-elf = "0.10.0"


